apply plugin: 'java'

group = pluginGroup
version = pluginVersion

sourceCompatibility = '21'
targetCompatibility = '21'

repositories {
    mavenCentral()
    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }
    maven {
        name = 'papermc'
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
    maven {
        url = 'https://repo.extendedclip.com/releases/'
    }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.21.7-R0.1-SNAPSHOT'
    compileOnly 'me.clip:placeholderapi:2.11.6'
}

import org.apache.tools.ant.filters.ReplaceTokens

processResources {
    from(sourceSets.main.resources.srcDirs) {
        filter ReplaceTokens, tokens: [version: version]
    }
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}
